# 1-team-one-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ai-ci-cd.yml
app/: __init__.py  main.py
app/api/: __init__.py
app/api/v1/: __init__.py  data.py  health.py  recommend.py  router.py
app/configs/: llm.yaml  llm_config.py
app/core/: __init__.py  config.py  exceptions.py  logging.py
app/data/: exercises.json  loader.py
app/prompts/: __init__.py
app/prompts/v1/: __init__.py  recommend.py  routines_shots.json
app/schemas/: __init__.py  common.py
app/schemas/v1/: __init__.py  exercise.py  request.py  response.py
app/services/: __init__.py  recommend_service.py  response_builder.py  rule_based_recommender.py
app/services/llm_clients/: __init__.py  base.py  commercial.py  exceptions.py  ollama_client.py  openai_client.py  self_hosted.py
app/utils/: time.py
tests/: __init__.py  conftest.py  test_health.py
tests/api/: test_root.py
tests/api/v1/: test_health.py
tests/fixtures/: exercises.json  llm_inference.json  users.json
tests/pilot/: __init__.py  test_dataset.py  test_ollama_client.py  test_openai_client.py  test_recommend.py  test_recommend_service.py  test_schemas.py
